# rust-nextjs-fse-assignment

./: README.md
bundle/: README.md
bundle/cert-service/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package-lock.json
bundle/cert-service/migrations/: 0001_init.sql  0002_reconcile_missing_migration.sql  0003_reconcile_missing_migration.sql  0004_reconcile_missing_migration.sql
bundle/cert-service/scripts/: run-cargo-build.sh
bundle/cert-service/src/: cert_parser.rs  config.rs  db.rs  error.rs  main.rs  models.rs  openapi.rs  routes.rs
bundle/cert-service/src/handlers/: health.rs  mod.rs
bundle/cert-service/src/handlers/certificates/: create.rs  get.rs  list.rs  mod.rs  stats.rs
bundle/cert-service/src/middleware/: request_id.rs
bundle/cert-service/src/services/: certificate_service.rs
bundle/cert-service/tests/: cert_parser_tests.rs
bundle/cert-service/tests/fixtures/: test_cert.pem
bundle/inventory-ui/: .env.local.example  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
bundle/inventory-ui/src/app/: globals.css  layout.tsx
bundle/inventory-ui/src/components/: CertificateDetail.tsx  CertificateTable.tsx  CopyableField.tsx  Dashboard.tsx  ExpiryBar.tsx  FilterBar.tsx  InventoryExplorer.tsx  ListControls.tsx  LoadingSkeleton.tsx  Pagination.tsx  StatCard.tsx  StatusBadge.tsx
bundle/inventory-ui/src/hooks/: useCertificates.ts
bundle/inventory-ui/src/lib/: backend-agent.ts  backend-client.ts  format.ts  swr-fetcher.ts  (+1 more)
(+8 files in other folders)
